--- a/src/components/GameSearch/GameSearch.module.scss
+++ b/src/components/GameSearch/GameSearch.module.scss
@@ -1,15 +1,3 @@
-@import 'styles/colors.scss';
-
-.container {
-  display: flex;
-  justify-content: center;
-}
-
 .searchbar {
-  width: 50%;
-  margin-bottom: 10;
-}
-
-.icon {
-  line-height: 0;
+    width: 25vw;
 }
