--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,3 @@
-@import './colors.scss';
 html,
 body {
     padding: 0;
@@ -14,4 +13,10 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+.container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
